[tool.poetry]
name = "aio-test"
version = "0.1.0"
description = "Education purpose async event loop implementation"
authors = ["Daniel Daniels <danields761@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.3.0"
structlog = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-clarity = "^0.3.0-alpha.0"
pytest-timeout = "^1.3.4"
isort = "^5.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
