[tool.poetry]
name = "aio-test"
version = "0.1.0"
description = "Education purpose async event loop implementation"
authors = ["Daniel Daniels <danields761@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
more-itertools = "^8.3.0"
structlog = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-clarity = "^0.3.0-alpha.0"
pytest-timeout = "^1.3.4"
isort = "^5.8.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
line-length = 100

[tool.mypy]
warn_redundant_casts = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
