[project]
name = "aio-test"
version = "0.1.0"
description = "Education purpose async event loop implementation"
authors = [
    {name = "Daniel Daniels", email = "danields761@gmail.com"}
]
license-expression = "MIT"
requires-python = ">=3.8,<4.0"
dependencies = [
    "more-itertools<9.0.0,>=8.3.0",
    "loguru",
]
[project.optional-dependencies]

[tool.pdm]
includes = []

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.1",
    "pytest-clarity>=0.3.0-alpha.0",
    "pytest-timeout>=1.3.4",
    "isort>=5.8.0",
    "black>=22.3.0",
    "flake8>=4.0.1",
    "mypy>=0.942",
    "click>=8.1.2",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

# Tools options
[tool.black]
line-length = 100

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.mypy]
warn_redundant_casts = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
